code/force-app/main/default/objects/FlowPersonalConfiguration__c/fields/Config1Name__c.field-meta.xml
<CustomField>
    <fullName>Config1Name__c</fullName>
    <label>Config1Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>