code/force-app/main/default/objects/FlowPersonalConfiguration__c/fields/Config1Value__c.field-meta.xml
<CustomField>
    <fullName>Config1Value__c</fullName>
    <label>Config1Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>