code/force-app/main/default/objects/FlowPersonalConfiguration__c/fields/Config2Value__c.field-meta.xml
<CustomField>
    <fullName>Config2Value__c</fullName>
    <label>Config2Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>