code/force-app/main/default/objects/FlowPersonalConfiguration__c/fields/Config3Value__c.field-meta.xml
<CustomField>
    <fullName>Config3Value__c</fullName>
    <label>Config3Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>